--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,25 +4,20 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Debug Holerite App",
-      "skipFiles": ["<node_internals>/**", "node_modules/**"],
+      "name": "Debug Holerites App (ts-node)",
       "program": "${workspaceFolder}/src/main.ts",
       "runtimeArgs": [
-        "--nolazy",
         "-r",
         "ts-node/register",
         "-r",
         "tsconfig-paths/register"
       ],
-      "sourceMaps": true,
-      "cwd": "${workspaceRoot}",
-      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen",
-      "restart": true,
       "env": {
         "NODE_ENV": "development"
-      }
+      },
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "skipFiles": ["<node_internals>/**", "node_modules/**"]
     }
   ]
 }
