--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,10 @@
       "@core/*": ["src/core/*"],
       "@domain/*": ["src/domain/*"],
       "@infra/*": ["src/infra/*"],
-      "@auth/*": ["src/domain/auth/*"],
-      "@users/*": ["src/domain/users/*"],
-      "@tenants/*": ["src/domain/tenants/*"],
-      "@payslips/*": ["src/domain/payslips/*"],
+      "@auth/*": ["src/domain/modules/auth/*"],
+      "@users/*": ["src/domain/modules/users/*"],
+      "@tenants/*": ["src/domain/modules/tenants/*"],
+      "@payslips/*": ["src/domain/modules/payslips/*"],
       "@common/*": ["src/common/*"],
       "@config/*": ["src/config/*"],
       "@database/*": ["src/database/*"],
