--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.859.0",
+    "@aws-sdk/client-secrets-manager": "^3.864.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@types/passport-jwt": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -54,7 +55,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.13.0",
+    "prisma": "^6.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
