implement own autheticator

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
+# APPLICATION
+APP_PORT=4000
+APP_NAME="Holerites"
+
+# DATABASE
+DB_USER=""
+DB_PASSWORD=""
+DB_DATABASE=""
+DB_HOST=""
+DB_PORT=5432
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?schema=public"
+
+# AUTHENTICATION
+JWT_PRIVATE_SECRET=""
+JWT_PRIVATE_SECRET_REFRESH=""
+JWT_TOKEN_EXPIRES_IN=""
+JWT_REFRESH_TOKEN_EXPIRES_IN=""
